# east-const-enforcer

./: CMakeLists.txt  CMakePresets.json  README.md  file.cpp  make.sh
.github/workflows/: ci.yml
cmake/: EastConstTestHarness.cmake  IntegrationHarnessSetup.cmake
cmake/toolchains/: homebrew-llvm.cmake
include/: EastConstEnforcer.h
src/: EastConstEnforcer.cpp  EastConstTidyModule.cpp  prog.cpp
tests/: EastConstEnforcerTest.cpp  EastConstExampleCasesTest.cpp  EastConstGridCodeGenTest.cpp  EastConstTestHarness.h  WesterlyRoundTripTest.cpp
tests/integration/: cases.json  config.json.in  run_integration_tests.py
tests/integration/fixtures/: clang_tidy_fix.expected.cpp  clang_tidy_fix.in.cpp  legacy_sample.expected.cpp  legacy_sample.in.cpp  standalone_basic.expected.cpp  standalone_basic.in.cpp
